--- a/WebContent/application/htm/indexKIUT.html
+++ b/WebContent/application/htm/indexKIUT.html
@@ -169,7 +169,7 @@
 					</div> -->
 					<div class="span4">
 						<img id="help" src="../img/help.png">
-						<p><a href="https://docs.google.com/document/d/1qhi7Uf_ZMsJpDNzfdvvy-Ii_bt4ztaBUansbjNQxumQ/edit">Afficher le <span id="guide">guide</span> d'utilisation du portfolio</a></p>
+						<p><a href="https://box.u-cergy.fr/public/c5a0e3fcc6ab">Afficher le <span id="guide">guide</span> d'utilisation du portfolio</a></p>
 					</div>
 				</div>
 			</div>
